
Revision history for MCE

1.50x Fri Jan 24 01:30:00 EST 2014

  [BUG FIXES]

  * Fixed issue with all 5 models croaking for an internal '_file' option.
    This has been broken since the 1.502 release. Methods impacted were:
       mce_flow_f, mce_grep_f, mce_loop_f, mce_map_f, and mce_stream_f

1.505 Thu Jan 21 01:30:00 EST 2014

  [BUG FIXES]

  * Delete $self->{input_data} inside the worker immediately during spawning
    (if input_data is an ARRAY, GLOB, or Iterator reference).

  * Reverted the logic for the RS (record separator) option from the 1.4x
    code base. This is now working as expected.

  * Specifying chunk_size => 'auto' via the 'init' method (all 5 models)
    causes MCE validation to croak due to 'auto' being carried over to the
    core API. Note that only the 5 models are allowed 'auto' for chunk_size
    as of this time.

  * Update to the MCE->do method. Previously, an undef sent back from the
    callback function ended up as a blank value "". Both "" and undef are
    now properly captured and sent back to the worker process.

  * Added an if statement inside the abort method.
  * Removed an old unlink _store.db statement (old code left behind).
  * Removed an unused _next variable inside Request.pm.

  [ENHANCEMENTS]

  * Enhanced egrep.pl to handle additional options including recursion.
    This script now supports many egrep options [ceHhiLlmnqRrsv].

  * IO performance for examples/cat.pl was improved. The real focus here is
    demonstrating output order.

  * The chunk_size option can take a suffix; K (Kilobytes) or M (Megabytes).

  * The following examples except --max-workers=NUM --chunk-size=NUM options.
    cat.pl, egrep.pl, findnull.pl, scaling_pings.pl, and wc.pl

  [NEW FEATURES]

  * The input_data option can now receive an iterator reference. Added a
    new example iterator.pl for demonstraton. In addition, there are
    several examples listed under a new section "SYNTAX for INPUT_DATA"
    under MCE::Core.pod.
